--- a/LoveComingHome/app/src/main/AndroidManifest.xml
+++ b/LoveComingHome/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ChangeInfomationActivity"></activity>
+        <activity android:name=".Activity.ChangeInfomationActivity"></activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
